Fix custom values in spacing props

--- a/packages/canon/src/css/utilities/m.css
+++ b/packages/canon/src/css/utilities/m.css
@@ -1,5 +1,5 @@
 .cu-m {
-  margin: var(--p);
+  margin: var(--m);
 }
 
 .cu-m-0\.5 {
